tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__futures__test__emit_futures_codegen@pre-mem2reg@llvm14_2.snap
---
source: tket-qsystem/src/llvm/futures.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i64, i64 } @_hl.main.1(i64 %0) {
alloca_block:
  %"0" = alloca i64, align 8
  %"1" = alloca i64, align 8
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca i64, align 8
  %"4_1" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, i64* %"2_0", align 4
  %"2_01" = load i64, i64* %"2_0", align 4
  call void @___inc_future_refcount(i64 %"2_01")
  store i64 %"2_01", i64* %"4_0", align 4
  store i64 %"2_01", i64* %"4_1", align 4
  %"4_02" = load i64, i64* %"4_0", align 4
  %"4_13" = load i64, i64* %"4_1", align 4
  store i64 %"4_02", i64* %"0", align 4
  store i64 %"4_13", i64* %"1", align 4
  %"04" = load i64, i64* %"0", align 4
  %"15" = load i64, i64* %"1", align 4
  %mrv = insertvalue { i64, i64 } undef, i64 %"04", 0
  %mrv6 = insertvalue { i64, i64 } %mrv, i64 %"15", 1
  ret { i64, i64 } %mrv6
}

declare void @___inc_future_refcount(i64)
